package com.github.badjavii.p03_Cliente;

public enum TipoCliente {
    REGULAR,
    PREMIUM
}