@startuml

class DetalleFactura{
    -cantidad: int
    -impuesto: double
    -precio: double
}

class Factura{
    -fecha: LocalDate
    -montoTotal: double
}

class Cliente{
    -id: int
    -nombre: String
    -correo: String
    -telefono: int
}

enum TipoCliente{
    REGULAR
    PREMIUM
}

abstract class Producto{
    -id: int
    -nombre: String
    -precioUnitario: double
    -cantidadStock: int

}

class Alimento{
    -fechaVencimiento: LocalDate
}

class Accesorio{

}

interface ProductoVendible{
    +verificarDisponibilidad(): boolean
    +reducirStock(cantidad: int): int
    +calcularDescuento(cliente: Cliente): double
}

class Material{
    -tipo String
    -peso: double
}

enum TipoNotificaciones{
    WHATSAPP
    CORREO
}

interface UINotificaciones{
    +enviarNotificacion(mensaje: String, cliente: Cliente): void
}

abstract class Notificaciones{
    -mensaje: String

    +{abstract}enviarNotificacion(mensaje: String, cliente: Cliente): void
}

class NotificacionesWhatsapp{

}

class NotificacionesCorreo{

}


Factura "1..*" *-- "1" DetalleFactura: -detalle: DetalleFactura

DetalleFactura "1..*" o-- "1" Producto: -producto: Producto

Producto <|-- Alimento
Producto <|-- Accesorio

Accesorio "0..*" o-- Material: -material: Material

Factura "0..*" o-- Cliente: cliente: Cliente

Cliente <.. ProductoVendible

ProductoVendible <|.. Producto

Cliente "0..*" o-- "1" TipoCliente: -tipoCliente: TipoCliente

Cliente <.. UINotificaciones

UINotificaciones <|.. Notificaciones
Notificaciones <|-- NotificacionesWhatsapp
Notificaciones <|-- NotificacionesCorreo
Notificaciones "1..*" *-- "1" Factura: -FacturaAsociada: Factura

@enduml


